heroes - some little progress

--- a/Javascript/GAMES/Heroes/index.html
+++ b/Javascript/GAMES/Heroes/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Heroes main</title>
     <link rel="stylesheet" href="css/main.css"/>
-    <script src="js/CONSTANTS.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/libs/require.js" data-main="js/config"></script>
 </head>
 <body>
 <div id="root"></div>
