--- a/Javascript/GAMES/Heroes/index.html
+++ b/Javascript/GAMES/Heroes/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
 <div id="root"></div>
+<div id="mainMenu" class="gameLayer">
+    <h3>Logo</h3>
+    <div id="main-menu-navigation">
+        <ul>
+            <li>SINGLE CAMPAIGN</li>
+            <li>LOAD GAME</li>
+            <li>TUTORIAL</li>
+            <li>CREDITS</li>
+        </ul>
+    </div>
+</div>
+<div id="inventoryLayer" class="gameLayer">asd</div>
+<div id="otherLayer" class="gameLayer">fff</div>
 </body>
 </html>
