--- a/Javascript/29-JS-APPS-Third-Party-APIs/01-OnlineMapTourism-GoogleMapsAPI.html
+++ b/Javascript/29-JS-APPS-Third-Party-APIs/01-OnlineMapTourism-GoogleMapsAPI.html
@@ -11,12 +11,13 @@
 <div id="navigation">
     <input type="text" id="cityInput" placeholder="Eg.: Sofia"/>
     <button id="addCityBtn">Add City</button>
+    <hr/>
     <h3>Select City</h3>
     <ul id="cityList">
     </ul>
     <hr/>
-    <button id="prevBtn">Prev</button>
-    <button id="nextBtn">Next</button>
+    <button id="prevBtn" class="navBtn">Prev</button>
+    <button id="nextBtn" class="navBtn">Next</button>
 </div>
 </body>
 </html>
