httpRequester and Students REST complete Task 1 and 3

--- a/Javascript/30-JS-APPS-Consuming-Remote-Data/01-httpRequestModule.html
+++ b/Javascript/30-JS-APPS-Consuming-Remote-Data/01-httpRequestModule.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 <div id="wrapper">
-    <button>Add Student</button>
-    <button>Get All Students</button>
-    <p>To work - this application needs to run NodeJS server.<br/>
-    You must start nodeJS server with the app.js file in server directory.</p>
+    <button id="addStudentBtn">Add Random Student</button>
+    <button id="getAllStudentsBtn">Get All Students</button>
+    <hr/>
+    <p id="notificationArea"></p>
+    <ul id="studentsList"></ul>
+    <hr/>
+    <p id="infoBox">To work - this application needs to run NodeJS server.<br/>
+    You must start nodeJS server with the app.js file in server directory.<br/>
+    I'v also had big issue with DELETE method. There was error that prevent me from sending DELETE request to the server and i couldn't find solution for it.
+    Sorry about that ...</p>
 </div>
 </body>
 </html>
