--- a/SinglePageApplications/MusicApp/app/edit-artist.html
+++ b/SinglePageApplications/MusicApp/app/edit-artist.html
@@ -28,19 +28,19 @@
                     <div class="form-group">
                         <label for="name" class="col-lg-2 control-label">Name</label>
                         <div class="col-lg-10">
-                            <input type="text" required="required" class="form-control" id="name" placeholder="Name" ng-model="artist.name" />
+                            <input type="text" required="required" class="form-control form-validation" id="name" placeholder="Name" ng-model="artist.name" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="image" class="col-lg-2 control-label">Image</label>
                         <div class="col-lg-10">
-                            <input type="text" required="required" class="form-control" id="image" placeholder="Image URL" ng-model="artist.image">
+                            <input type="text" required="required" class="form-control form-validation" ng-pattern="/\.(gif|jpg|jpeg|tiff|png)$/i" id="image" placeholder="Image URL" ng-model="artist.image">
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="date" class="col-lg-2 control-label">Created</label>
                         <div class="col-lg-10">
-                            <input type="text" required="required" ng-pattern="/\d\d/\d\d/\d\d\d\d/" class="form-control" id="date" placeholder="Date Created (dd/mm/yyyy)" ng-model="artist.created">
+                            <input type="text" required="required" ng-pattern="/\d\d/\d\d/\d\d\d\d/" class="form-control form-validation" id="date" placeholder="Date Created (dd/mm/yyyy)" ng-model="artist.created">
                         </div>
                     </div>
                 </fieldset>
@@ -67,11 +67,14 @@
                 </fieldset>
                 <div class="form-group">
                     <div class="pull-right">
-                        <button type="submit" class="btn btn-primary" ng-click="saveArtist(artist, newArtistForm)">Save</button>
+                        <button type="submit" ng-disabled="newArtistForm.$invalid" class="btn btn-primary" ng-click="saveArtist(artist, newArtistForm)">Save</button>
                         <button class="btn btn-default" ng-click="cancel()">Cancel</button>
                     </div>
                 </div>
             </form>
+        </div>
+        <div class="col-md-6 image-container">
+            <img src="" ng-src="{{artist.image}}" alt=""/>
         </div>
     </div>
 </div>
