--- a/SinglePageApplications/MusicApp/app/index.html
+++ b/SinglePageApplications/MusicApp/app/index.html
@@ -14,16 +14,12 @@
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#">Add Artist</a></li>
+            <li><a href="#/add-artist">Add Artist</a></li>
         </ul>
     </div>
 </div>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            Col 1
-        </div>
-    </div>
+<div class="container" ng-view>
+
 </div>
 <footer class="text-center">
     <hr/>
@@ -33,8 +29,16 @@
 </footer>
 <script src="lib/jquery-2.1.1.min.js"></script>
 <script src="lib/bootstrap.min.js"></script>
-<script src="lib/angular/angular.min.js"></script>
+<script src="lib/angular/angular.js"></script>
+<script src="lib/angular/angular-resource.js"></script>
+<script src="lib/angular/angular-route.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers/PageController.js"></script>
+<script src="js/controllers/ArtistDetailsController.js"></script>
+<script src="js/controllers/AddArtistController.js"></script>
+<script src="js/controllers/ListArtistsController.js"></script>
+<script src="js/filters/status.js"></script>
+<script src="js/services/artistData.js"></script>
+<script src="js/directives/searchArtists.js"></script>
 </body>
 </html>
